--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: "This statement is false."
 baseurl: ""
 url: "http://blog.suminb.com"
 #permalink: "/post/:title"
-paginate: 10
-paginate_path: "/post/page/:num"
+paginate: 15
+paginate_path: "/page/:num"
 
 # Build settings
 markdown: kramdown
