--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,9 @@ email: suminb@gmail.com
 description: "This statement is false."
 baseurl: ""
 url: "http://blog.suminb.com"
-#permalink: "/post/:title"
+permalink: /post/:title
 paginate: 15
-paginate_path: "/page/:num"
+paginate_path: /page/:num
 
 # Build settings
 markdown: kramdown
-permalink: pretty
