--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,6 @@ url: "http://blog.suminb.com"
 permalink: /post/:title
 paginate: 15
 paginate_path: /page/:num
-
+google_analytics_id: UA-346833-1
 # Build settings
 markdown: kramdown
