--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ permalink: /post/:title
 paginate: 15
 paginate_path: /page/:num
 google_analytics_id: UA-346833-1
+disqus: true
 
 # Build settings
 markdown: kramdown
