--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ paginate: 15
 paginate_path: /page/:num
 google_analytics_id: UA-346833-1
 disqus: true
+username: suminb
 
 # Build settings
 markdown: kramdown
